<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/currentLocation_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/current_location"
            android:textColor="@color/black"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/currentLocation_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/currentLocation"
            tools:layout_editor_absoluteX="22dp"
            tools:layout_editor_absoluteY="634dp" />

        <TextView
            android:id="@+id/country_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country"
            tools:layout_editor_absoluteX="17dp"
            tools:layout_editor_absoluteY="51dp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/city_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city"
            tools:layout_editor_absoluteX="17dp"
            tools:layout_editor_absoluteY="84dp"
            tools:ignore="MissingConstraints" />

    </LinearLayout>
</RelativeLayout>