<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddActivity">

    <Button
        android:id="@+id/ShowButton"
        android:layout_width="192dp"
        android:layout_height="56dp"
        android:text="@string/show"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="109dp"
        tools:layout_editor_absoluteY="597dp" />

    <Button
        android:id="@+id/SaveButton"
        android:layout_width="192dp"
        android:layout_height="56dp"
        android:text="@string/save"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="109dp"
        tools:layout_editor_absoluteY="515dp" />

    <EditText
        android:id="@+id/editTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/name"
        tools:layout_editor_absoluteX="70dp"
        tools:layout_editor_absoluteY="60dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editDescription"
        android:layout_width="327dp"
        android:layout_height="297dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/name"
        tools:layout_editor_absoluteX="42dp"
        tools:layout_editor_absoluteY="172dp"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>