<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@drawable/background">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardElevation="20dp"
        app:cardCornerRadius="40dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp"
            >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/localiza_o"
        android:textSize="36sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/localiza_o_atual"
        android:textSize="18sp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/azul"
        app:cornerRadius = "20dp"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/procurar_localiza_o"
        android:textSize="18sp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/azul"
        app:cornerRadius = "20dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/ver_temperatura"
        android:textSize="18sp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/azul"
        app:cornerRadius = "20dp" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/carregar_ultima_localiza_o"
            android:textSize="18sp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/azul"
            app:cornerRadius = "20dp"
            />





        </LinearLayout>

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardElevation="20dp"
        app:cardCornerRadius="20dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="40dp"
            android:textColor="@color/black"
            android:hint="País"
            android:id="@+id/pais">

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="40dp"
            android:textColor="@color/black"
            android:hint="Cidade"
            android:id="@+id/cidade"
            android:layout_marginTop="40dp">

        </TextView>

        <TextView
            android:id="@+id/longi"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="120dp"
            android:hint="Longitude"
            android:textColor="@color/black"
            android:textSize="40dp">

        </TextView>

        <TextView
            android:id="@+id/lat"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="80dp"
            android:hint="Latitude"
            android:textColor="@color/black"
            android:textSize="40dp">

        </TextView>

    </androidx.cardview.widget.CardView>

</LinearLayout>